--- a/Views/Furniture/Details.cshtml
+++ b/Views/Furniture/Details.cshtml
@@ -10,34 +10,34 @@
             <h2 class="mb-0">Eşya Detayları</h2>
         </div>
         <div class="card-body">
-            <!-- Görsel buraya eklendi -->
+            <!-- Görsel alanı -->
             <div class="text-center mb-4">
                 <img src="@Model.ImagePath" alt="@Model.Title" class="img-fluid rounded" style="max-height: 300px;" />
             </div>
 
             <dl class="row">
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.Title)</dt>
+                <dt class="col-sm-3">Başlık</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.Title)</dd>
 
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.Description)</dt>
+                <dt class="col-sm-3">Açıklama</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.Description)</dd>
 
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.Category)</dt>
+                <dt class="col-sm-3">Kategori</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.Category)</dd>
 
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.Condition)</dt>
+                <dt class="col-sm-3">Durum</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.Condition)</dd>
 
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.Location)</dt>
+                <dt class="col-sm-3">Konum</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.Location)</dd>
 
-                <dt class="col-sm-3">@Html.DisplayNameFor(m => m.DatePosted)</dt>
+                <dt class="col-sm-3">İlan Tarihi</dt>
                 <dd class="col-sm-9">@Html.DisplayFor(m => m.DatePosted)</dd>
             </dl>
 
             <div class="mt-4">
                 <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-info px-4 py-2 rounded-pill">Düzenle</a>
-                <a asp-action="Index" class="btn btn-outline-secondary px-4 py-2 rounded-pill">Listeye Dön</a>
+                <a asp-action="Index" class="btn btn-outline-secondary px-4 py-2 rounded-pill">⬅️ Listeye Dön</a>
             </div>
         </div>
     </div>
