--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Gizlilik Politikası";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<section class="container my-5">
+    <h2 class="text-muted">🔐 Gizlilik Politikası</h2>
+    <p>Bu sadece örnek bir gizlilik politikası sayfasıdır.</p>
+</section>
