--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -89,8 +89,8 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                                     <li><a class="dropdown-item" asp-controller="Furniture" asp-action="MyItems">Eşyalarım</a></li>
-                                    <a class="dropdown-item" asp-controller="Order" asp-action="MyOrders">Siparişlerim</a>
-                                    <li><a class="dropdown-item" href="#">Beğendiklerim</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Order" asp-action="MyOrders">Siparişlerim</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Favorites" asp-action="Index">Beğendiklerim</a></li>
                                     <li><a class="dropdown-item" asp-controller="Notification" asp-action="Index">Bildirimler</a></li>
                                     <li><hr class="dropdown-divider" /></li>
                                     <li>
