--- a/Views/Order/Confirmation.cshtml
+++ b/Views/Order/Confirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="container my-5 text-center">
-    <h2 class="text-success display-6">🎉 Thank You!</h2>
-    <p class="lead">Your order has been placed successfully.</p>
-    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mt-3">Back to Home</a>
+    <h2 class="text-success display-6">Teşekkürler!</h2>
+    <p class="lead">Siparişin başarıyla oluşturuldu!</p>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mt-3">AnaSayfaya Dön</a>
 </section>
